--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: GeoWatch
 email:
 description:
 baseurl: "/geowatch"
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://jakoblo.github.io/geowatch/" # the base hostname & protocol for your site
 twitter_username:
 github_username:
 
