--- a/_data/geolinks/data.yml
+++ b/_data/geolinks/data.yml
@@ -13,3 +13,7 @@
 - title: Libra
   url: https://libra.developmentseed.org/
   info: OSM Daten zum Downloaden
+  
+- title: Astro Digital
+  url: https://astrodigital.com/
+  info: satellite imagery browser
