--- a/_data/geolinks/data.yml
+++ b/_data/geolinks/data.yml
@@ -17,3 +17,7 @@
 - title: Astro Digital
   url: https://astrodigital.com/
   info: satellite imagery browser
+    
+- title: OpenTopography.org
+  url: http://www.opentopography.org/
+  info: High-Resolution Topography Data (SRTM, Lidar)
