--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: GeoWatch
 email:
 description:
-baseurl: "/geowatch"
+baseurl: "http://watch.rodao.de/"
 url: "http://watch.rodao.de" # the base hostname & protocol for your site
 twitter_username:
 github_username:
